--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   ],
   "dependencies": {
     "@sap/cds": "^7",
-    "express": "^4",
-    "dotenv": "^16.3.1"
+    "@sap/cds-lsp": "^7.6.1",
+    "@sap/xssec": "^3.6.1",
+    "dotenv": "^16.3.1",
+    "express": "^4"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^7",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0"
   },
   "scripts": {
