--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cap-js/document-management",
+  "name": "@cap-js/attachments-sdm",
   "version": "1.0.0",
   "description": "CAP plugin for effortless integration of CAP applications with SAP Document Management Service.",
   "main": "cds-plugin.js",
@@ -15,6 +15,7 @@
     "plugin"
   ],
   "dependencies": {
+    "@cap-js/attachments": "^1.0.1",
     "@sap/cds": "^7",
     "@sap/cds-lsp": "^7.6.1",
     "@sap/xssec": "^3.6.1",
