Error handling for DI response

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@sap/cds-lsp": "^7.6.1",
     "@sap/xssec": "^3.6.1",
     "dotenv": "^16.3.1",
-    "express": "^4"
+    "express": "^4",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
