--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@sap/cds-lsp": "^7.6.1",
     "@sap/xssec": "^3.6.1",
     "dotenv": "^16.3.1",
-    "express": "^4"
+    "express": "^4",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
@@ -31,28 +32,29 @@
   "scripts": {
     "start": "cds-serve",
     "test": "jest --coverage --config jest.config.js"
-  },"cds": {
-  "requires": {
-    "kinds": {
-      "attachments-sdm": {
-        "impl": "@cap-js/attachments-sdm/lib/sdm"
-      }
-    },
-    "[development]": {
-      "attachments": {
-        "kind": "sdm"
-      }
-    },
-    "[production]": {
-      "attachments": {
-        "kind": "sdm"
-      }
-    },
-    "[hybrid]": {
-      "attachments": {
-        "kind": "sdm"
+  },
+  "cds": {
+    "requires": {
+      "kinds": {
+        "attachments-sdm": {
+          "impl": "@cap-js/attachments-sdm/lib/sdm"
+        }
+      },
+      "[development]": {
+        "attachments": {
+          "kind": "sdm"
+        }
+      },
+      "[production]": {
+        "attachments": {
+          "kind": "sdm"
+        }
+      },
+      "[hybrid]": {
+        "attachments": {
+          "kind": "sdm"
+        }
       }
     }
   }
-}
 }
