--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sap/cds": "^7",
     "@sap/cds-lsp": "^7.6.1",
     "@sap/xssec": "^3.6.1",
+    "axios-mock-adapter": "^1.22.0",
     "dotenv": "^16.3.1",
     "express": "^4",
     "request": "^2.88.2"
