--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
+    "@eslint/js": "^9.4.0",
     "@sap/cds-dk": "^7",
-    "eslint": "^8.57.0",
+    "eslint": "^9.4.0",
+    "eslint-plugin-jest": "^28.5.0",
+    "globals": "^15.3.0",
     "jest": "^29.7.0"
   },
   "scripts": {
     "start": "cds-serve",
-    "test": "jest --coverage --config jest.config.js"
+    "test": "jest --coverage --config jest.config.js",
+    "lint": "npx eslint --fix ."
   },
   "cds": {
     "requires": {
