--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -54,7 +54,7 @@ jobs:
           # Additional arguments for the sonarcloud scanner
           args:
             -Dsonar.projectKey=cap-js-sdm
-            -Dsonar.sources=lib
+            -Dsonar.sources=CAP_Validation_CC_Sonar_develop/lib
             -Dsonar.exclusions=**/node_modules/**
             -Dsonar.js.file.suffixes=.js,.jsx
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
