--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -44,7 +44,10 @@ jobs:
         node_version: ['20.x']
         
     steps:
-
+    
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
       - name: npm install and test
         run: |
           npm install
