--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -69,6 +69,7 @@ jobs:
             -Dsonar.sources=lib
             -Dsonar.exclusions=**/node_modules/**
             -Dsonar.js.file.suffixes=.js,.jsx
+            -Dsonar.qualitygate.wait=true
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.exclusions=/dist/,/node_modules/,**/*.spec.js,**/*.test.js
             -Dsonar.verbose=false # This should generally be set to `false` in a production environment to not clutter logs. Use `true` for debugging.
