--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "scripts": {
     "start": "cds-serve",
-    "test": "jest --coverage --config jest.config.js"
+    "test": "jest --coverage --config jest.config.js",
+    "integration-test": "jest --config jest-integration.config.js"
   },
   "cds": {
     "requires": {
