--- a/.github/workflows/unit.tests.yml
+++ b/.github/workflows/unit.tests.yml
@@ -1,7 +1,7 @@
-# This workflow will do a clean installation of node dependencies and run tests
+# This workflow will do a clean installation of node dependencies and run unit-tests with code-coverage
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: UnitTests
+name: UnitTestsWithCodeCoverage
 
 on:
   push:
