--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -31,7 +31,6 @@ on:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
-    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 permissions:
@@ -63,8 +62,8 @@ jobs:
         # uses: SonarSource/sonarqube-scan-action@v1.1.0
         uses: SonarSource/sonarqube-scan-action@v1.1.0
         env:
-          GITHUB_TOKEN: 5f00e34e-2186-4fad-9668-8ef15af3b6b1  # Needed to get PR information
-          SONAR_TOKEN: squ_d48999c121b577436aa15e362bafba7590ba473a   # Generate a token on SonarQube, add it to the secrets of this repo with the name SONAR_TOKEN (Settings > Secrets > Actions > add new repository secret)
+          GITHUB_TOKEN: ${{ secrets.SDM_CAP_GITHUB_TOKEN }}  # Needed to get PR information
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # Generate a token on SonarQube, add it to the secrets of this repo with the name SONAR_TOKEN (Settings > Secrets > Actions > add new repository secret)
           SONAR_HOST_URL: https://sonar.tools.sap   # add the URL of your instance to the secrets of this repo with the name SONAR_HOST_URL (Settings > Secrets > Actions > add new repository secret)
         with:
           # Additional arguments for the sonarcloud scanner
@@ -85,7 +84,7 @@ jobs:
         # Force to fail step after specific time.
         timeout-minutes: 5
         env:
-         SONAR_TOKEN: squ_d48999c121b577436aa15e362bafba7590ba473a
+         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
          SONAR_HOST_URL: https://sonar.tools.sap #OPTIONAL
 
       # Optionally you can use the output from the Quality Gate in another step.
