--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -46,7 +46,7 @@ jobs:
     steps:
     
       - name: Checkout code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         
       - name: npm install and test
         run: |
