--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -68,13 +68,13 @@ jobs:
             -Dsonar.js.file.suffixes=.js,.jsx
             -Dsonar.qualitygate.wait=true
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-            -Dsonar.exclusions=/dist/,/node_modules/,**/*.spec.js,**/*.test.js
+            -Dsonar.exclusions=/dist/,/node_modules/,**/*.spec.js,**/*.test.js,lib/sdm.js
             -Dsonar.verbose=false # This should generally be set to `false` in a production environment to not clutter logs. Use `true` for debugging.
      
       # Check the Quality Gate status.
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
-        uses: sonarsource/sonarqube-quality-gate-action@master
+        uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
         # Force to fail step after specific time.
         timeout-minutes: 5
         env:
