--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "CAP plugin for effortless integration of CAP applications with SAP Document Management Service.",
   "main": "cds-plugin.js",
+  "license": "Apache-2.0",
   "files": [
     "lib",
     "srv",
