--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -65,8 +65,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # SonarQube token
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   # SonarQube URL
-        run: |
-          sonar-scanner \
+        with:
+          # Additional arguments for the sonarcloud scanner
+          args:
             -Dsonar.projectKey=cap-js-sdm \
             -Dsonar.sources=. \
             -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/*.spec.js,**/*.test.js \
