--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -62,6 +62,7 @@ jobs:
         run: npm run test
         
       - name: Analyze with SonarQube
+        uses: SonarSource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # SonarQube token
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   # SonarQube URL
