--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -69,11 +69,11 @@ jobs:
         with:
           # Additional arguments for the sonarcloud scanner
           args:
-            -Dsonar.projectKey=cap-js-sdm \
-            -Dsonar.sources=. \
-            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/*.spec.js,**/*.test.js \
-            -Dsonar.javascript.file.suffixes=.js \
-            -Dsonar.qualitygate.wait=true \
+            -Dsonar.projectKey=cap-js-sdm
+            -Dsonar.sources=.
+            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/*.spec.js,**/*.test.js 
+            -Dsonar.javascript.file.suffixes=.js 
+            -Dsonar.qualitygate.wait=true 
             -Dsonar.verbose=false
 
       - name: SonarQube Quality Gate check
