--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -51,6 +51,16 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          # Additional arguments for the sonarcloud scanner
+          args:
+            -Dsonar.sources=lib
+            -Dsonar.exclusions=**/node_modules/**
+            -Dsonar.js.file.suffixes=.js
+            -Dsonar.qualitygate.wait=true
+            -Dsonar.exclusions=/dist/,/node_modules/,**/*.spec.js,**/*.test.js
+            -Dsonar.verbose=false # This should generally be set to `false` in a production environment to not clutter logs. Use `true` for debugging.
+
 
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
