--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -29,10 +29,10 @@ name: SonarQube analysis
 on:
   push:
     branches:
-      - develop
+      - sonarcubeConfiguration
   pull_request:
     branches:
-      - develop
+      - sonarcubeConfiguration
     types: [opened, synchronize, reopened]
   workflow_dispatch:
   
