--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -31,8 +31,7 @@ on:
     branches:
       - develop
   pull_request:
-    branches:
-      - develop
+    branches: [ "*" ]
     types: [opened, synchronize, reopened]
   workflow_dispatch:
   
