--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -30,10 +30,16 @@ on:
   push:
     branches:
       - develop
+
   pull_request:
     branches:
       - develop
     types: [opened, synchronize, reopened]
+
+  concurrency:
+  group: lint-${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
   workflow_dispatch:
   
 permissions:
