--- a/.github/workflows/unit.tests.yml
+++ b/.github/workflows/unit.tests.yml
@@ -6,9 +6,14 @@ name: UnitTestsWithCodeCoverage
 on:
   push:
     branches: [ "develop" ]
+
   pull_request:
     branches: [ "develop" ]
     types: [opened, synchronize, reopened, auto_merge_enabled]
+
+  concurrency:
+  group: lint-${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
     
 permissions:
   pull-requests: read
