--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - cfdeploy
   pull_request:
-    types: [closed]
+    types: [opened, synchronize, reopened]
     branches:
       - cfdeploy
   workflow_dispatch:
