--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -26,10 +26,6 @@ jobs:
           
       - name: Login to Cloud Foundry
         run: |
-          wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
-          echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
-          sudo apt-get update
-          sudo apt-get install cf8-cli
           cf login -a ${{ secrets.CF_API }} -u ${{ secrets.CF_USER }} -p ${{ secrets.CF_PASSWORD }} -o ${{ secrets.CF_ORG }} -s ${{ secrets.CF_SPACE }}
       - name: Clone and prepare projects
         run: |
@@ -42,6 +38,9 @@ jobs:
           npm i cap-js-sdm-1.0.0.tgz
       - name: Build and deploy
         run: |
+          wget -P /tmp https://github.com/SAP/cloud-mta-build-tool/releases/download/v1.1.7/cloud-mta-build-tool_1.1.7_Linux_amd64.tar.gz
+          tar -xvzf /tmp/cloud-mta-build-tool_1.1.7_Linux_amd64.tar.gz
+          sudo mv mbt /usr/local/bin/
           mbt build
           cf deploy mta_archives/sdmincidents_1.0.0.mtar -f
           
