--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install cf8-cli
           cf login -a ${{ secrets.CF_API }} -u ${{ secrets.CF_USER }} -p ${{ secrets.CF_PASSWORD }} -o ${{ secrets.CF_ORG }} -s ${{ secrets.CF_SPACE }}
-      - name: Clone and prepare projects
+      - name: Clone and prepare projects & Build and deploy
         run: |
           git clone --single-branch --branch sdmIncidents https://github.com/cap-js/incidents-app.git
           git clone --single-branch --branch develop https://github.com/cap-js/sdm.git
@@ -40,9 +40,11 @@ jobs:
           mv cap-js-sdm-1.0.0.tgz ../incidents-app
           cd ../incidents-app
           npm i cap-js-sdm-1.0.0.tgz
+          
       - name: Build and deploy
         run: |
-          cd ../incidents-app
+          echo "Inside Build & Deploy"
+          pwd
           wget -P /tmp https://github.com/SAP/cloud-mta-build-tool/releases/download/v1.2.28/cloud-mta-build-tool_1.2.28_Linux_amd64.tar.gz
           tar -xvzf /tmp/cloud-mta-build-tool_1.2.28_Linux_amd64.tar.gz
           sudo mv mbt /usr/local/bin/
@@ -50,8 +52,3 @@ jobs:
           pwd
           mbt build
           cf deploy mta_archives/sdmincidents_1.0.0.mtar -f
-          
-      - name: Install npm in sdm
-        run: |
-          cd ../sdm
-          npm i
