--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -33,12 +33,16 @@ jobs:
           cf login -a ${{ secrets.CF_API }} -u ${{ secrets.CF_USER }} -p ${{ secrets.CF_PASSWORD }} -o ${{ secrets.CF_ORG }} -s ${{ secrets.CF_SPACE }}
       - name: Clone and prepare projects & Build and deploy
         run: |
+          cd ..
+          echo "base folder"
+          pwd
           git clone --single-branch --branch sdmIncidents https://github.com/cap-js/incidents-app.git
-          git clone --single-branch --branch develop https://github.com/cap-js/sdm.git
           cd sdm
           npm pack
           mv cap-js-sdm-1.0.0.tgz ../incidents-app
           cd ../incidents-app
+          echo "incidents-app"
+          pwd
           npm i cap-js-sdm-1.0.0.tgz
           
       - name: Build and deploy
