--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -30,9 +30,18 @@ jobs:
           cf login -a ${{ secrets.CF_API }} -u ${{ secrets.CF_USER }} -p ${{ secrets.CF_PASSWORD }} -o ${{ secrets.CF_ORG }} -s ${{ secrets.CF_SPACE }}
       - name: Clone and prepare projects & Build and deploy
         run: |
+          echo "Working directory"
+          pwd
+          ls
+          echo "list of files"
           git clone --single-branch --branch develop https://github.com/cap-js/sdm.git
           git clone --single-branch --branch sdmIncidents https://github.com/cap-js/incidents-app.git
+          echo "list of files after clone"
+          pwd
+          ls
           cd sdm
+          pwd
+          echo "pwd"
           npm pack
           mv cap-js-sdm-1.0.0.tgz ../incidents-app
           cd ../incidents-app
@@ -40,14 +49,4 @@ jobs:
           pwd
           npm i cap-js-sdm-1.0.0.tgz
           
-      - name: Build and deploy
-        run: |
-          echo "Inside Build & Deploy"
-          pwd
-          wget -P /tmp https://github.com/SAP/cloud-mta-build-tool/releases/download/v1.2.28/cloud-mta-build-tool_1.2.28_Linux_amd64.tar.gz
-          tar -xvzf /tmp/cloud-mta-build-tool_1.2.28_Linux_amd64.tar.gz
-          sudo mv mbt /usr/local/bin/
-          echo "Before mbt"
-          pwd
-          mbt build
-          cf deploy mta_archives/sdmincidents_1.0.0.mtar -f
+      
