--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -48,5 +48,21 @@ jobs:
           echo "incidents-app"
           pwd
           npm i cap-js-sdm-1.0.0.tgz
+
+      - name: Build and deploy
+        run: |
+          cd incidents-app
+          echo "Inside Build & Deploy"
+          pwd
+          wget -P /tmp https://github.com/SAP/cloud-mta-build-tool/releases/download/v1.2.28/cloud-mta-build-tool_1.2.28_Linux_amd64.tar.gz
+          tar -xvzf /tmp/cloud-mta-build-tool_1.2.28_Linux_amd64.tar.gz
+          sudo mv mbt /usr/local/bin/
+          echo "Before mbt"
+          pwd
+          mbt build
+          cf deploy mta_archives/sdmincidents_1.0.0.mtar -f
+
+          
+
           
       
