--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -47,7 +47,7 @@ jobs:
           npm i @sap/cds-dk -g
           mbt build
           cf install-plugin multiapps
-          cf deploy mta_archives/sdmincidents_1.0.0.mtar -f
+          cf deploy mta_archives/sdmincidents_1.0.0.mtar -f --no-confirm
 
           
 
