--- a/.github/workflows/cfdeploy.yml
+++ b/.github/workflows/cfdeploy.yml
@@ -1,10 +1,7 @@
 name: Deploy to Cloud Foundry
 on:
-  push:
-    branches:
-      - develop
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [closed]
     branches:
       - develop
   workflow_dispatch:
@@ -13,7 +10,7 @@ permissions:
   pull-requests: read
 jobs:
   deploy:
-    if: github.event.pull_request.merged == false
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:        
       - name: Use Node.js 20.x
