--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@cap-js/sdm",
-  "version": "1.0.0",
   "description": "CAP plugin for effortless integration of CAP applications with SAP Document Management Service.",
+  "version": "1.0.0",
+  "repository": "cap-js/sdm",
+  "author": "SAP SE (https://www.sap.com)",
+  "homepage": "https://cap.cloud.sap/",
   "main": "cds-plugin.js",
   "license": "Apache-2.0",
   "files": [
