--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "Apache-2.0",
   "files": [
     "lib",
-    "srv",
-    "index.cds"
+    "index.cds",
+    "CHANGELOG.md"
   ],
   "keywords": [
     "sap",
