--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,6 @@ jobs:
       with:
         tag: 'v${{ steps.package-version.outputs.current-version }}'
         body: '${{ steps.parse-changelog.outputs.body }}'
-    - run: npm publish --access public --dry
+    - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-
-    - name: Untar package and list contents
-      run: |
-        tar -zxf cap-js-sdm-1.0.0.tgz
-        echo "Contents of the delivery package:"
-        ls -R
